--- a/main.html
+++ b/main.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <form method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required placeholder="Name"><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required placeholder="Email"><br><br>
+
+    <label>Gender:</label>
+    <input type="radio" id="gender_m" name="gender" required>
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_f" name="gender" required>
+    <label for="gender_f">Female</label><br><br>
+
+    <label for="cars">Car Brands:</label>
+    <select id="cars" name="cars" required>
+      <option value="">--Please choose an option--</option>
+      <option value="Tata">Tata</option>
+      <option value="Hyundai">Hyundai</option>
+      <option value="Maruti">Maruti</option>
+    </select><br><br>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" required placeholder="Age"><br><br>
+
+    <label for="dob">DOB:</label>
+    <input type="date" id="dob" name="dob" required><br><br>
+
+    <label for="tel">Phone Number:</label>
+    <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br><br>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required placeholder="Password"><br><br>
+
+    <input type="checkbox" id="tos" name="tos" required>
+    <label for="tos">I agree to the TOS</label><br><br>
+
+    <button type="submit">Submit</button>
+  </form>
 
 </body>
+</html>
 
 </html>
